# action-harness

./: .gitignore  .harness-progress.md  ARCHITECTURE.md  CLAUDE.md  HARNESS.md  LICENSE  PROJECT_VISION.md  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/agents/: spec-reviewer.md
.claude/commands/: sync.md
.github/workflows/: ci.yml
.harness/: protected-paths.yml  statusline.sh
.harness/agents/: bug-hunter.md  lead.md  openspec-reviewer.md  quality-reviewer.md  spec-compliance-reviewer.md  spec-writer.md  test-reviewer.md
docs/: README.md
docs/explore/: repo-lead.md  reproducible-agent-runtime.md  same-context-fix-retry.md
docs/guides/: always-on-setup.md
openspec/: ROADMAP.md
tests/: conftest.py  helpers.py  test_agents.py  test_assess_agent.py  test_assess_cli.py  test_assessment.py  test_branch_protection.py  test_catalog_entries.py  test_catalog_frequency.py  test_catalog_loader.py  test_catalog_renderer.py  test_checkpoint.py  test_ci_parser.py  test_cli.py  test_dashboard.py  test_evaluator.py  test_event_log.py  test_formatter.py  test_gap_proposals.py  test_integration.py  test_issue_intake.py  test_lead.py  test_lead_registry.py  test_merge.py  test_models.py  test_openspec_reviewer.py  test_pipeline_catalog.py  test_pipeline_checkpoint.py  test_pipeline_issue.py  test_pipeline_merge.py  test_pipeline_prompt.py  test_pipeline_review.py  test_pr.py  test_preflight.py  test_prerequisites.py  test_profiler.py  test_progress.py  test_progress_cli.py  test_progress_feed.py  test_project_consolidation.py  (+14 more)
(+407 files in other folders)
